Added further functionality and first test

--- a/MathFunctions/MathFunctions.csproj
+++ b/MathFunctions/MathFunctions.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Cube.cs" />
     <Compile Include="IMathFunction.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="SumOfFunctions.cs" />
