--- a/MathFunctionsTest/MathFunctionsTest.csproj
+++ b/MathFunctionsTest/MathFunctionsTest.csproj
@@ -70,8 +70,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CubeTest.cs" />
     <Compile Include="LinearTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquareTest.cs" />
+    <Compile Include="SumOfFunctionsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathFunctions\MathFunctions.csproj">
